# jadhav-lab-to-nwb

./: .pre-commit-config.yaml  README.md  make_env.yml  pyproject.toml
.github/workflows/: test-install.yml
src/jadhav_lab_to_nwb/datainterfaces/: base_dlc_interface.py  base_epoch_interface.py  base_video_interface.py
src/jadhav_lab_to_nwb/olson_2024/: __init__.py  olson_2024_behavior_interface.py  olson_2024_behaviorinterface.py  olson_2024_convert_all_sessions.py  olson_2024_convert_session.py  olson_2024_dlc_interface.py  olson_2024_epoch_interface.py  olson_2024_example_notebook.ipynb  olson_2024_ingest_behavior.py  olson_2024_ingest_ephys.py  olson_2024_ingest_epoch.py  olson_2024_ingest_lfp.py  olson_2024_ingest_sorting.py  olson_2024_ingest_video.py  olson_2024_insert_session.py  olson_2024_metadata.yaml  olson_2024_notes.md  olson_2024_nwbconverter.py  olson_2024_sorting_interface.py  olson_2024_spike_gadgets_lfp_interface.py  olson_2024_spike_gadgets_recording_interface.py  olson_2024_video_interface.py
src/jadhav_lab_to_nwb/rivera_and_shukla_2025/: __init__.py  inspect_rivera_and_shukla_2025_example_sessions.ipynb  rivera_and_shukla_2025_behavior_interface.py  rivera_and_shukla_2025_convert_all_sessions.py  rivera_and_shukla_2025_convert_session.py  rivera_and_shukla_2025_dlc_interface.py  rivera_and_shukla_2025_epoch_interface.py  rivera_and_shukla_2025_example_notebook.ipynb  rivera_and_shukla_2025_insert_all_sessions.py  rivera_and_shukla_2025_insert_session.py  rivera_and_shukla_2025_metadata.yaml  rivera_and_shukla_2025_notes.md  (+5 more)
(+23 files in other folders)
